src/plugins/platforms/wasm/qwasmclipboard.cpp
@@ -86,26 +86,10 @@ void QWasmClipboard::paste(val event)
     QWasmIntegration::get()->getWasmClipboard()->sendClipboardData(event);
 }
 
-void QWasmClipboard::beforeInput(emscripten::val event)
-{
-    event.call<void>("preventDefault");
-    event.call<void>("stopPropagation");
-}
-
-void QWasmClipboard::input(emscripten::val event)
-{
-    event.call<void>("preventDefault");
-    event.call<void>("stopPropagation");
-    event["target"].set("innerHTML", std::string());
-    event["target"].set("value", std::string());
-}
-
 EMSCRIPTEN_BINDINGS(qtClipboardModule) {
     function("qtClipboardCutTo", &QWasmClipboard::cut);
     function("qtClipboardCopyTo", &QWasmClipboard::copy);
     function("qtClipboardPasteTo", &QWasmClipboard::paste);
-    function("qtClipboardBeforeInput", &QWasmClipboard::beforeInput);
-    function("qtClipboardInput", &QWasmClipboard::input);
 }
 
 QWasmClipboard::QWasmClipboard()
